--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
 </head>
 
 <body>
-  
+    <div class="flex  gap-1">
+        <a href="#" class="btn btn-sm">label</a>
+        <samp href="#" class="btn btn-md">label</samp>
+        <button href="#" class="btn btn-lg">label</a>
+    </div>
+
+    <div class="flex  gap-1">
+        <a 
+         aria-label="label"
+         href="#" class="btn btn-sm"></a>
+        <samp 
+        aria-label="label" 
+        href="#" class="btn btn-md"></samp>
+        <button
+         aria-label="label"
+         href="#" class="btn btn-lg"></a>
+    </div>
+
 </body>
 
 </html>
