--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
 
 <body>
 
-    <div class="flex gap-1">
+  <header>
+    <div class="container py-base">
+        <nav class="flex items-center gap-1.5">
+            <a href="#">
+                <img src="assets/icons/logo.svg" alt="Logo Zingen">
+            </a>
 
-        <a href="#" class="social" aria-label="tiktok"></a>
-        <a href="#" class="social" aria-label="instagram"></a>
-        <a href="#" class="social" aria-label="twitter"></a>
-        <a href="#" class="social" aria-label="discord"></a>
+            <a href="#about"  class="desktop-only">Cocheça o app</a>
+            <a href="#features"  class="desktop-only">Funcionalidades</a>
+            <a href="#features"  class="desktop-only">Planos e preços</a>
+
+            <a href="#dowload" class="btn btn-sm">Baixa Agora</a>
+        </nav>
     </div>
+  </header>
 
 
 
