--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zingen - Karaokê</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Zingen - Karaokê</title>
 
-    <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style/index.css">
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght @0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght @0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 
 </head>
 
@@ -22,20 +22,19 @@
 
   <header>
     <div class="container py-base">
-        <nav class="flex items-center gap-1.5">
-            <a href="#">
-                <img src="assets/icons/logo.svg" alt="Logo Zingen">
-            </a>
+      <nav class="flex items-center gap-1.5">
+        <a href="#">
+          <img src="assets/icons/logo.svg" alt="Logo Zingen">
+        </a>
 
-            <a href="#about"  class="desktop-only">Cocheça o app</a>
-            <a href="#features"  class="desktop-only">Funcionalidades</a>
-            <a href="#features"  class="desktop-only">Planos e preços</a>
+        <a href="#about" class="desktop-only">Cocheça o app</a>
+        <a href="#features" class="desktop-only">Funcionalidades</a>
+        <a href="#pricing" class="desktop-only">Planos e preços</a>
 
-            <a href="#dowload" class="btn btn-sm">Baixa Agora</a>
-        </nav>
+        <a href="#dowload" class="btn btn-sm">Baixa Agora</a>
+      </nav>
     </div>
   </header>
-
 
 
 </body>
